...
      />

      <Tabs.Screen
        name="dlc"
        options={{
          title: 'Submit DLC',
          tabBarButtonTestID: 'tab-dlc',
          tabBarIcon: ({ size, color }) => <Icon name="camera-01" size={size} color={color} />,
        }}
      />

      <Tabs.Screen
        name="profile"
        options={{
          title: 'Profile',
          tabBarButtonTestID: 'tab-profile',
          tabBarIcon: ({ size, color }) => <Icon name="user-01" size={size} color={color} />,
        }}
      />
    </Tabs>
  );
}
...
