...
            source={{ uri: previewUri }}
            className="h-64 w-56 rounded-md border border-primary"
          />
        </View>
      ) : null}
      <Text className="mt-4 text-center text-sm text-foreground">
        This photo is required for the system to verify your Authenticity.
      </Text>
      <Text className="mt-2 text-center text-sm text-foreground">
        Please make sure that it is your photograph. Before submitting the photo, please read Our
        Privacy Policy.
      </Text>
      <Text className="mt-2 text-center text-sm font-bold text-destructive">
        [Note: The photo {`won't`} be used for any other purpose except for authenticating your
        Identity for Pension.]
      </Text>
      <Button testID="fv-preview-action" size="lg" className="mt-6" onPress={onSubmitPress}>
        <Text className="text-base font-bold text-white">{actionLabel}</Text>
      </Button>
      <FooterImg />
    </Container>
  );
}
...
